[Editorial] labour -> labor

--- a/src/epub/text/book-10.xhtml
+++ b/src/epub/text/book-10.xhtml
@@ -15,8 +15,11 @@
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span>The last of all the natural philosophers,</span>
+					<br/>
 					<span>And the most shameless too, did come from Samos,</span>
+					<br/>
 					<span>A grammar teacher, and the most ill-bred</span>
+					<br/>
 					<span>And most unmanageable of mankind.</span>
 				</p>
 			</blockquote>
@@ -25,19 +28,26 @@
 			<p>They also say that he used to flatter Mithras, the steward of Lysimachus, in a disgraceful manner, calling him in his letters Paean, and King; and also that he flattered Idomeneus, and Herodotus, and Timocrates who had revealed all his secret practices, and that he flattered them on this very account. And in his letters to Leontium, he says, “O king Apollo, my dear Leontium, what transports of joy did I feel when I read your charming letter.” And to Themista, the wife of Leonteus, he writes, “I am ready and prepared, if you do not come to me, to roll myself to wherever you and Themista invite me.” And he addresses Pythocles, a beautiful youth, thus, “I will sit quiet,” says he, “awaiting your longed for and godlike approach.” And at another time, writing to Themista, he says, “That he had determined to make his way with her,” as Theodorus tells us in the fourth book of his treatises against Epicurus.</p>
 			<p>He also wrote to many other courtesans, and especially to Leontium, with whom Metrodorus also was in love. And in his treatise on the Chief Good, he writes thus, “For I do not know what I can consider good, if I put out of sight the pleasures which arise from favors, and those which are derived from amatory pleasures, and from music, and from the contemplation of beauty.” And in his letter to Pythocles, he writes, “And, my dear boy, avoid all sorts of education.”</p>
 			<p>Epictetus also attacks him as a most debauched man, and reproaches him most vehemently, and so does Timocrates, the brother of Metrodorus, in his treatise entitled the Merry Guests, and this Timocrates had been a disciple in his school, though he afterwards abandoned it; and he says that he used to vomit twice a day, in consequence of his intemperance; and that he himself had great difficulty in escaping from this nocturnal philosophy, and that mystic kind of reunion. He also accuses Epicurus of shameful ignorance in his reasoning, and still more especially in all matters relating to the conduct of life. And says that he was in a pitiable state of health, so that he could not for many years rise up from his sofa; and that he used to spend a minae a day on his eating, as he himself states in his letter to Leontium, and in that to the philosophers at Mitylene. He also says that many courtesans used to live with him and Metrodorus; and among them Marmarium, and Hedea, and Erotium, and Nicidium.</p>
-			<p>And in the thirty-seven books which he wrote about natural philosophy, they say that he says a great many things of the same kind over and over again, and that in them he writes in contradiction of other philosophers, and especially of Nausiphanes, and speaks as follows, word for word: “But if anyone else ever was afflicted in such a manner, then certainly this man had a continual labour, striving to bring forth the sophistical boastfulness of his mouth, like many other slaves.” And Epicurus also speaks of Nausiphanes in his letters, in the following terms: “These things led him on to such arrogance of mind, that he abused me and called me a schoolmaster.” He used also to call him Lungs, and Blockhead, and Humbug, and Fornicator. And he used to call Plato’s followers Flatterers of Dionysius, but Plato himself he called Golden. Aristotle he called a debauchee and a glutton, saying that he joined the army after he had squandered his patrimony, and sold drugs. He used also to call Protagoras a porter, and the secretary of Democritus, and to say that he taught boys their letters in the streets. Heraclitus, he called a disturber; Democritus, he nicknamed Lerocritus;<a href="endnotes.xhtml#note-138" id="noteref-138" epub:type="noteref">138</a> and Antidorus, Saenidorus;<a href="endnotes.xhtml#note-139" id="noteref-139" epub:type="noteref">139</a> the Cynics he called enemies of Greece; and the Dialecticians he charged with being eaten up with envy. Pyrrho, he said, was ignorant and unlearned.</p>
+			<p>And in the thirty-seven books which he wrote about natural philosophy, they say that he says a great many things of the same kind over and over again, and that in them he writes in contradiction of other philosophers, and especially of Nausiphanes, and speaks as follows, word for word: “But if anyone else ever was afflicted in such a manner, then certainly this man had a continual labor, striving to bring forth the sophistical boastfulness of his mouth, like many other slaves.” And Epicurus also speaks of Nausiphanes in his letters, in the following terms: “These things led him on to such arrogance of mind, that he abused me and called me a schoolmaster.” He used also to call him Lungs, and Blockhead, and Humbug, and Fornicator. And he used to call Plato’s followers Flatterers of Dionysius, but Plato himself he called Golden. Aristotle he called a debauchee and a glutton, saying that he joined the army after he had squandered his patrimony, and sold drugs. He used also to call Protagoras a porter, and the secretary of Democritus, and to say that he taught boys their letters in the streets. Heraclitus, he called a disturber; Democritus, he nicknamed Lerocritus;<a href="endnotes.xhtml#note-138" id="noteref-138" epub:type="noteref">138</a> and Antidorus, Saenidorus;<a href="endnotes.xhtml#note-139" id="noteref-139" epub:type="noteref">139</a> the Cynics he called enemies of Greece; and the Dialecticians he charged with being eaten up with envy. Pyrrho, he said, was ignorant and unlearned.</p>
 			<p>But these men who say this are all wrong, for there are plenty of witnesses of the unsurpassable kindness of the man to everybody; both his own country which honored him with brazen statues, and his friends who were so numerous that they could not be contained in whole cities; and all his acquaintances who were bound to him by nothing but the charms of his doctrine, none of whom ever deserted him, except Metrodorus, the son of Stratoniceus, who went over to Carneades, probably because he was not able to bear with equanimity the unapproachable excellence of Epicurus. Also, the perpetual succession of his school, which, when every other school decayed, continued without any falling off, and produced a countless number of philosophers, succeeding one another without any interruption. We may also speak here of his gratitude towards his parents, and his beneficence to his brothers, and his gentleness to his servants (as is plain from his will, and from the fact too, that they united with him in his philosophical studies, and the most eminent of them was the one whom I have mentioned already, named Mus); and his universal philanthropy towards all men.</p>
 			<p>His piety towards the Gods, and his affection for his country was quite unspeakable; though, from an excess of modesty, he avoided affairs of state. And though he lived when very difficult times oppressed Greece, he still remained in his own country, only going two or three times across to Ionia to see his friends, who used to throng to him from all quarters, and to live with him in his garden, as we are told by Apollodorus. (This garden he bought for eighty minae.)</p>
 			<p>And Diocles, in the third book of his Excursion, says that they all lived in the most simple and economical manner; “They were content,” says he, “with a small cup of light wine, and all the rest of their drink was water.” He also tells us that Epicurus would not allow his followers to throw their property into a common stock, as Pythagoras did, who said that the possessions of friends were held in common. For he said that such a doctrine as that was suited rather for those who distrusted one another; and that those who distrusted one another were not friends. But he himself in his letters, says that he is content with water and plain bread, and adds, “Send me some Cytherean cheese, that if I wish to have a feast, I may have the means.” This was the real character of the man who laid down the doctrine that pleasure was the chief good; whom Athenaeus thus mentions in an epigram:</p>
 			<blockquote epub:type="z3998:poem">
 				<p>
-					<span>O men, you labour for pernicious ends;</span>
+					<span>O men, you labor for pernicious ends;</span>
+					<br/>
 					<span>And out of eager avarice, begin</span>
+					<br/>
 					<span>Quarrels and wars. And yet the wealth of nature</span>
+					<br/>
 					<span>Fixes a narrow limit for desires,</span>
+					<br/>
 					<span>Though empty judgment is insatiable.</span>
+					<br/>
 					<span>This lesson the wise child of Neocles</span>
+					<br/>
 					<span>Had learnt by heart, instructed by the Muses,</span>
+					<br/>
 					<span>Or at the sacred shrine of Delphi’s God.</span>
 				</p>
 			</blockquote>
@@ -49,8 +59,11 @@
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span>Now, fare-ye-well, remember all my words;</span>
+					<br/>
 					<span>This was the dying charge of Epicurus:</span>
+					<br/>
 					<span>Then to the bath he went, and drank some wine,</span>
+					<br/>
 					<span>And sank beneath the cold embrace of Pluto.</span>
 				</p>
 			</blockquote>
@@ -203,6 +216,7 @@
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span>“ ’Tis well to taste of life, and then when born</span>
+					<br/>
 					<span>To pass with quickness to the shades below.<a href="endnotes.xhtml#note-142" id="noteref-142" epub:type="noteref">142</a></span>
 				</p>
 			</blockquote>
@@ -219,7 +233,9 @@
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span>Shouting and groaning, and the rocks around</span>
+					<br/>
 					<span>Reechoed his sad wails, the mountain heights</span>
+					<br/>
 					<span>Of Locrian lands, and sad Euboea’s hills.<a href="endnotes.xhtml#note-143" id="noteref-143" epub:type="noteref">143</a></span>
 				</p>
 			</blockquote>
