--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -17,10 +17,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>I’ve often wondered much at Heraclitus,</span>
+						<br/>
 						<span>That he should chose to live so miserably,</span>
+						<br/>
 						<span>And die by such a miserable fate.</span>
+						<br/>
 						<span>For fell disease did master all his body,</span>
+						<br/>
 						<span>With water quenching all the light of his eyes,</span>
+						<br/>
 						<span>And bringing darkness o’er his mind and body.</span>
 					</p>
 				</blockquote>
@@ -30,7 +35,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Among them came that cuckoo Heraclitus</span>
+						<br/>
 						<span>The enigmatical obscure reviler</span>
+						<br/>
 						<span>Of all the common people.</span>
 					</p>
 				</blockquote>
@@ -44,6 +51,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>A well compacted helm to lead a man</span>
+						<br/>
 						<span>Straight through the path of life.</span>
 					</p>
 				</blockquote>
@@ -60,10 +68,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>I who lie here am Heraclitus, spare me</span>
+						<br/>
 						<span>Ye rude unlettered men: ’Twas not for you</span>
-						<span>That I did labour, but for wiser people.</span>
+						<br/>
+						<span>That I did labor, but for wiser people.</span>
+						<br/>
 						<span>One man may be to me a countless host,</span>
+						<br/>
 						<span>And an unnumbered multitude be no one;</span>
+						<br/>
 						<span>And this I still say in the shades below.</span>
 					</p>
 				</blockquote>
@@ -71,9 +84,13 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Be not too hasty, skimming o’er the book</span>
+						<br/>
 						<span>Of Heraclitus; ’tis a difficult road,</span>
+						<br/>
 						<span>For mist is there, and darkness hard to pierce.</span>
+						<br/>
 						<span>But if you have a guide who knows his system,</span>
+						<br/>
 						<span>Then everything is clearer than the sun.</span>
 					</p>
 				</blockquote>
@@ -81,12 +98,19 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>I heard, O Heraclitus, of your death,</span>
+						<br/>
 						<span>And the news filled my eyes with mournful tears,</span>
+						<br/>
 						<span>When I remembered all the happy hours</span>
+						<br/>
 						<span>When we with talk beguiled the setting sun.</span>
+						<br/>
 						<span>You now are dust; but still the honeyed voice</span>
+						<br/>
 						<span>Of your sweet converse doth and will survive;</span>
+						<br/>
 						<span>Nor can fell death, which all things else destroys,</span>
+						<br/>
 						<span>Lay upon that his ruthless conquering grasp.</span>
 					</p>
 				</blockquote>
@@ -98,6 +122,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Xenophanes, not much a slave to vanity,</span>
+						<br/>
 						<span>The wise reprover of the tricks of Homer.</span>
 					</p>
 				</blockquote>
@@ -107,10 +132,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Threescore and seven long years are fully passed,</span>
+						<br/>
 						<span>Since first my doctrines spread abroad through Greece:</span>
+						<br/>
 						<span>And ’twixt that time and my first view of light</span>
+						<br/>
 						<span>Six lustres more must added be to them:</span>
+						<br/>
 						<span>If I am right at all about my age,</span>
+						<br/>
 						<span>Lacking but eight years of a century.</span>
 					</p>
 				</blockquote>
@@ -129,8 +159,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>And ’twill be needful for you well to know,</span>
+						<br/>
 						<span>The fearless heart of all-convincing truth:</span>
+						<br/>
 						<span>Also the opinions, though less sure, of men,</span>
+						<br/>
 						<span>Which rest upon no certain evidence.</span>
 					</p>
 				</blockquote>
@@ -138,9 +171,13 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Let not the common usages of men</span>
+						<br/>
 						<span>Persuade your better taught experience,</span>
+						<br/>
 						<span>To trust to men’s unsafe deceitful sight,</span>
+						<br/>
 						<span>Or treacherous ears, or random speaking tongue:</span>
+						<br/>
 						<span>Reason alone will prove the truth of facts.</span>
 					</p>
 				</blockquote>
@@ -148,7 +185,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>The vigorous mind of wise Parmenides,</span>
+						<br/>
 						<span>Who classes all the errors of the thoughts</span>
+						<br/>
 						<span>Under vain fantasies.</span>
 					</p>
 				</blockquote>
@@ -170,10 +209,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Great is the strength, invincible the might</span>
+						<br/>
 						<span>Of Zeno, skilled to argue on both sides</span>
+						<br/>
 						<span>Of any question, th’ universal critic;</span>
+						<br/>
 						<span>And of Melissus too. They rose superior</span>
+						<br/>
 						<span>To prejudice in general; only yielding</span>
+						<br/>
 						<span>To very few.</span>
 					</p>
 				</blockquote>
@@ -186,10 +230,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Your noble wish, O Zeno, was to slay</span>
+						<br/>
 						<span>A cruel tyrant, freeing Elea</span>
+						<br/>
 						<span>From the harsh bonds of shameful slavery,</span>
+						<br/>
 						<span>But you were disappointed; for the tyrant</span>
+						<br/>
 						<span>Pounded you in a mortar. I say wrong,</span>
+						<br/>
 						<span>He only crushed your body, and not you.</span>
 					</p>
 				</blockquote>
@@ -225,7 +274,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Like that Democritus, wisest of men,</span>
+						<br/>
 						<span>Sage ruler of his speech; profound converser,</span>
+						<br/>
 						<span>Whose works I love to read among the first.</span>
 					</p>
 				</blockquote>
@@ -235,8 +286,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>What man was e’er so wise, who ever did</span>
+						<br/>
 						<span>So great a deed as this Democritus?</span>
+						<br/>
 						<span>Who kept off death, though present for three days,</span>
+						<br/>
 						<span>And entertained him with hot steam of bread.</span>
 					</p>
 				</blockquote>
@@ -268,6 +322,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Protagoras, that slippery arguer,</span>
+						<br/>
 						<span>In disputatious contests fully skilled.</span>
 					</p>
 				</blockquote>
@@ -281,10 +336,15 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>I hear accounts of you, Protagoras,</span>
+						<br/>
 						<span>That, travelling far from Athens, on the road,</span>
+						<br/>
 						<span>You, an old man, and quite infirm, did die.</span>
+						<br/>
 						<span>For Cecrops’ city drove you forth to exile;</span>
+						<br/>
 						<span>But you, though ’scaping dread Minerva’s might,</span>
+						<br/>
 						<span>Could not escape the outspread arms of Pluto.</span>
 					</p>
 				</blockquote>
@@ -305,8 +365,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Beat more and more; you’re beating but a bag;</span>
+						<br/>
 						<span>Beat, Anaxarchus is in heav’n with Jove.</span>
+						<br/>
 						<span>Hereafter Proserpine will rack your bones,</span>
+						<br/>
 						<span>And say, Thus perish, you accursed beater.</span>
 					</p>
 				</blockquote>
@@ -314,7 +377,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>“Such stream as issues from a wounded God;</span>
+						<br/>
 						<span>Pure emanation, uncorrupted flood,</span>
+						<br/>
 						<span>Unlike our gross, diseas’d, terrestrial blood.”<a href="endnotes.xhtml#note-131" id="noteref-131" epub:type="noteref">131</a></span>
 					</p>
 				</blockquote>
@@ -335,12 +400,19 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Now, you old man, you Pyrrho, how could you</span>
+						<br/>
 						<span>Find an escape from all the slavish doctrines</span>
+						<br/>
 						<span>And vain imaginations of the Sophists?</span>
+						<br/>
 						<span>How did you free yourself from all the bonds</span>
+						<br/>
 						<span>Of sly chicane, and artful deep persuasion?</span>
+						<br/>
 						<span>How came you to neglect what sort of breeze</span>
+						<br/>
 						<span>Blows round your Greece, and what’s the origin</span>
+						<br/>
 						<span>And end of everything?</span>
 					</p>
 				</blockquote>
@@ -348,7 +420,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>These things, my heart, O Pyrrho, longs to hear,</span>
+						<br/>
 						<span>How you enjoy such ease of life and quiet,</span>
+						<br/>
 						<span>The only man as happy as a God.</span>
 					</p>
 				</blockquote>
@@ -357,6 +431,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>But as the race of falling leaves decay,</span>
+						<br/>
 						<span>Such is the fate of man.<a href="endnotes.xhtml#note-132" id="noteref-132" epub:type="noteref">132</a></span>
 					</p>
 				</blockquote>
@@ -364,8 +439,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Die then, my friend, what boots it to deplore?</span>
+						<br/>
 						<span>The great, the good Patroclus is no more.</span>
+						<br/>
 						<span>He, far thy better, was foredoom’d to die;</span>
+						<br/>
 						<span>And thou, doest thou bewail mortality?<a href="endnotes.xhtml#note-133" id="noteref-133" epub:type="noteref">133</a></span>
 					</p>
 				</blockquote>
@@ -374,7 +452,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Avoiding men to study all devoted,</span>
+						<br/>
 						<span>He ponders with himself, and never heeds</span>
+						<br/>
 						<span>The glory or disputes which harass Philo.</span>
 					</p>
 				</blockquote>
@@ -384,7 +464,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>And now, O Glaucus, son of Leptines,</span>
+						<br/>
 						<span>Such is the mind of mortal man, which changes</span>
+						<br/>
 						<span>With every day that Jupiter doth send.</span>
 					</p>
 				</blockquote>
@@ -392,8 +474,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Why then do men assert that wretched mortals</span>
+						<br/>
 						<span>Are with true wisdom gifted; for on you</span>
+						<br/>
 						<span>We all depend; and we do everything</span>
+						<br/>
 						<span>Which pleases you.</span>
 					</p>
 				</blockquote>
@@ -401,6 +486,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>And no man knows distinctly anything,</span>
+						<br/>
 						<span>And no man ever will.</span>
 					</p>
 				</blockquote>
@@ -408,8 +494,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Who now can tell whether to live may not</span>
+						<br/>
 						<span>Be properly to die. And whether that</span>
+						<br/>
 						<span>Which men do call to die, may not in truth</span>
+						<br/>
 						<span>Be but the entrance into real life?</span>
 					</p>
 				</blockquote>
@@ -417,7 +506,9 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>These things are not perceptible to sight,</span>
+						<br/>
 						<span>Nor to the ears, nor comprehensible</span>
+						<br/>
 						<span>To human intellect.</span>
 					</p>
 				</blockquote>
@@ -425,6 +516,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Believing nothing, but such circumstances</span>
+						<br/>
 						<span>As have befallen each.</span>
 					</p>
 				</blockquote>
@@ -432,6 +524,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Long in the field of words we may contend,</span>
+						<br/>
 						<span>Reproach is infinite and knows no end.</span>
 					</p>
 				</blockquote>
@@ -439,8 +532,11 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Armed, or with truth or falsehood, right or wrong.</span>
+						<br/>
 						<span>(So voluble a weapon is the tongue),</span>
+						<br/>
 						<span>Wounded we wound, and neither side can fail,</span>
+						<br/>
 						<span>For every man has equal strength to rail:<a href="endnotes.xhtml#note-134" id="noteref-134" epub:type="noteref">134</a></span>
 					</p>
 				</blockquote>
@@ -488,6 +584,7 @@
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>But what is evidently seen prevails,</span>
+						<br/>
 						<span>Wherever it may be.</span>
 					</p>
 				</blockquote>
