--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -30,8 +30,8 @@
 					<p>This is the account given by Virgil⁠—<a href="book-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span class="i1">Spretæ Ciconum quo munere matres</span>
-							<span>Inter sacra Deûm nocturnique orgia Bacchi,</span>
+							<span class="i1">Spretæ Ciconum quo munere matres</span><br />
+							<span>Inter sacra Deûm nocturnique orgia Bacchi,</span><br />
 							<span>Discerptum latos juvenem sparsere per agros.</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">iv</span> 520.</span>
@@ -39,11 +39,11 @@
 					<p>Which Dryden translates⁠—</p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>The Thracian matrons who the youth accus’d,</span>
-							<span>Of love disdain’d and marriage rites refus’d;</span>
-							<span>With furies and nocturnal orgies fir’d,</span>
-							<span>At length against his sacred life conspir’d;</span>
-							<span>Whom ev’n the savage beasts had spar’d they kill’d,</span>
+							<span>The Thracian matrons who the youth accus’d,</span><br />
+							<span>Of love disdain’d and marriage rites refus’d;</span><br />
+							<span>With furies and nocturnal orgies fir’d,</span><br />
+							<span>At length against his sacred life conspir’d;</span><br />
+							<span>Whom ev’n the savage beasts had spar’d they kill’d,</span><br />
 							<span>And strew’d his mangled limbs about the field.</span>
 						</p>
 					</blockquote>
@@ -100,10 +100,10 @@
 					<p>This is exactly the character that Horace gives of him: <a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Omnis Aristippum decuit color et status et res;</span>
+							<span>Omnis Aristippum decuit color et status et res;</span><br />
 							<span>Tentantem majora, fere præsentibus æequum.</span>
 						</p>
-							<cite><i epub:type="se:name.publication.book">Epistles</i> <span epub:type="z3998:roman">i</span> 23, 24.</cite>
+						<cite><i epub:type="se:name.publication.book">Epistles</i> <span epub:type="z3998:roman">i</span> 23, 24.</cite>
 					</blockquote>
 				</li>
 				<li id="note-25" epub:type="endnote">
@@ -179,22 +179,22 @@
 					</blockquote>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
-							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ’ ἀνδρῶν</span>
+							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ᾿ ἀνδρῶν</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
 					</blockquote>
 					<p>The first of which is translated by Pope: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>Oh, blest Atrides, born of prosperous fate,</span>
+							<span>Oh, blest Atrides, born of prosperous fate,</span><br />
 							<span>Successful monarch of a mighty state!</span>
 						</p>
 					</blockquote>
 					<p>The Greek parody in the text is: </p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
-							<span>Ὦ πέπον Ἀρχύτα, ψαλληγενὲς, ὀλβιότυφε</span>
-							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ’ ἀνδρῶν.</span>
+							<span>Ὦ πέπον Ἀρχύτα, ψαλληγενὲς, ὀλβιότυφε</span><br />
+							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ᾿ ἀνδρῶν.</span>
 						</p>
 					</blockquote>
 				</li>
@@ -262,7 +262,7 @@
 					<p>There is a pun intended here; as Diogenes proposed Didymus a fate somewhat similar to that of the beaver. <a href="book-6.xhtml#noteref-63" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Cupiens evadere damno</span>
+							<span>Cupiens evadere damno</span><br />
 							<span>Testiculorum.</span>
 						</p>
 					</blockquote>
@@ -280,7 +280,7 @@
 					<p>This is a line of the <i epub:type="se:name.publication.play">Phoenissae</i> of Euripides, <span epub:type="z3998:roman">v</span>. 40. <a href="book-6.xhtml#noteref-67" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-68" epub:type="endnote">
-					<p>The pun here is on the similarity of the noun <i xml:lang="grc">ἐλάαν</i>, an olive, to the verb <i xml:lang="grc">ἐλαᾶν</i>, to drive; the words <i xml:lang="grc">μάστιξεν δ’ ἐλαᾶν</i> are of frequent occurrence in Homer. <a href="book-6.xhtml#noteref-68" epub:type="backlink">↩</a></p>
+					<p>The pun here is on the similarity of the noun <i xml:lang="grc">ἐλάαν</i>, an olive, to the verb <i xml:lang="grc">ἐλαᾶν</i>, to drive; the words <i xml:lang="grc">μάστιξεν δ᾿ ἐλαᾶν</i> are of frequent occurrence in Homer. <a href="book-6.xhtml#noteref-68" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-69" epub:type="endnote">
 					<p>This line occurs, Homer, <i epub:type="se:name.publication.poem">Iliad</i> ε, 83. <a href="book-6.xhtml#noteref-69" epub:type="backlink">↩</a></p>
@@ -319,16 +319,16 @@
 					<p>This a parody on two lines in the <i epub:type="se:name.publication.play">Antiope</i> of Euripides:</p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
-							<span>Γνώμῃ γὰρ ἀνδρὸς εὖ μὲν οἰκοῦνται πόλεις,</span>
-							<span>Εὖ δ’ οἶκος εἴς τ’ αὖ πόλεμον ἰσχύει μέγα.</span>
+							<span>Γνώμῃ γὰρ ἀνδρὸς εὖ μὲν οἰκοῦνται πόλεις,</span><br />
+							<span>Εὖ δ᾿ οἶκος εἴς τ᾿ αὖ πόλεμον ἰσχύει μέγα.</span>
 						</p>
 					</blockquote>
 					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>Wisdom it is which regulates both cities,</span>
-							<span>And private citizens, and makes their lot</span>
-							<span>Secure and happy; nor is her influence</span>
+							<span>Wisdom it is which regulates both cities,</span><br />
+							<span>And private citizens, and makes their lot</span><br />
+							<span>Secure and happy; nor is her influence</span><br />
 							<span>Of less account in war.</span>
 						</p>
 					</blockquote>
@@ -344,23 +344,23 @@
 					<p>The Greek in the text is:</p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
-							<span>Κεῖνος μὲν πανάριστος ὃς εὖ εἰπόντι πίθηται,</span>
-							<span>Ἐσθλὸς δ’ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
+							<span>Κεῖνος μὲν πανάριστος ὃς εὖ εἰπόντι πίθηται,</span><br />
+							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
 						</p>
 					</blockquote>
 					<p>The lines in Hesiod are: </p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
-							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span>
-							<span>Ἐσθλὸς δ’ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
+							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span><br />
+							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Opera et Dies</i> 293.</cite>
 					</blockquote>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>That man is best, whose unassisted wit</span>
-							<span>Perceives at once what in each case is fit.</span>
-							<span>And next to him, he surely is most wise,</span>
+							<span>That man is best, whose unassisted wit</span><br />
+							<span>Perceives at once what in each case is fit.</span><br />
+							<span>And next to him, he surely is most wise,</span><br />
 							<span>Who willingly submits to good advice.</span>
 						</p>
 					</blockquote>
@@ -400,12 +400,12 @@
 					<p>This is similar to Virgil’s description. <a href="book-7.xhtml#noteref-94" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Quinque tenent cœlum zonæ, quarum una corusco</span>
-							<span>Semper Sole rubens, et torrida semper ab igni:</span>
-							<span>Quam circum extremæ dextrà lævàque trahuntur.</span>
-							<span>Cœruleâ glacie concretæ atque imbribus atris.</span>
-							<span>Has inter mediamque duæ mortalibus ægris</span>
-							<span>Munere concessæ Divûm, et via secta per ambas,</span>
+							<span>Quinque tenent cœlum zonæ, quarum una corusco</span><br />
+							<span>Semper Sole rubens, et torrida semper ab igni:</span><br />
+							<span>Quam circum extremæ dextrà lævàque trahuntur.</span><br />
+							<span>Cœruleâ glacie concretæ atque imbribus atris.</span><br />
+							<span>Has inter mediamque duæ mortalibus ægris</span><br />
+							<span>Munere concessæ Divûm, et via secta per ambas,</span><br />
 							<span>Obliquus qua se signorum verteret ordo.</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">I</span> 233.</cite>
@@ -413,16 +413,16 @@
 					<p>There is no part of Dryden’s translation superior to that of this passage.</p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>Five girdles bind the skies; the torrid zone</span>
-							<span>Glows with the passing and repassing sun;</span>
-							<span>Far on the right and left, th’ extremes of heaven,</span>
-							<span>To frosts, and snows, and bitter blasts are given;</span>
-							<span>Betwixt the midst. And there the Gods assigned</span>
-							<span>Four habitable seats for human kind,</span>
-							<span>And, cross their limits cut a sloping way,</span>
+							<span>Five girdles bind the skies; the torrid zone</span><br />
+							<span>Glows with the passing and repassing sun;</span><br />
+							<span>Far on the right and left, th’ extremes of heaven,</span><br />
+							<span>To frosts, and snows, and bitter blasts are given;</span><br />
+							<span>Betwixt the midst. And there the Gods assigned</span><br />
+							<span>Four habitable seats for human kind,</span><br />
+							<span>And, cross their limits cut a sloping way,</span><br />
 							<span>Which the twelve signs in beauteous order sway.</span>
 						</p>
- <cite><abbr>l.</abbr> 322.</span>
+ <cite><abbr>l.</abbr> 322.</cite>
 					</blockquote>
 				</li>
 				<li id="note-95" epub:type="endnote">
@@ -447,8 +447,8 @@
 					<p>This is referring to the Stoic doctrine ridiculed by Horace: <a href="book-7.xhtml#noteref-101" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Si dives qui sapiens est,</span>
-							<span>Et sutor bonus, et solus formosus, et est Rex</span>
+							<span>Si dives qui sapiens est,</span><br />
+							<span>Et sutor bonus, et solus formosus, et est Rex</span><br />
 							<span>Cur optas quod habes?</span>
 						</p>
  <cite>Horace, <i epub:type="se:name.publication.poem">Satires</i> <span epub:type="z3998:roman">i</span> 130.</span>
@@ -456,9 +456,9 @@
 					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>If every man is rich who’s wise,</span>
-							<span>A cobbler too beyond all price;</span>
-							<span>A handsome man, and eke a king;</span>
+							<span>If every man is rich who’s wise,</span><br />
+							<span>A cobbler too beyond all price;</span><br />
+							<span>A handsome man, and eke a king;</span><br />
 							<span>Why thus your vows at random fling?</span>
 						</p>
 					</blockquote>
@@ -490,27 +490,27 @@
 					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say: <a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Morte carent animæ, semperque priore relicta</span>
-							<span>Sede, novis domibus habitant vivuntque receptæ;</span>
-							<span>Ipse ego, nam memini, Trojani tempora belli,</span>
-							<span>Panthorides Euphorbus eram, cui pectore quondam</span>
-							<span>Hæsit in adverso gravis hasta minoris Atridæ:</span>
-							<span>Agnovi Clypeum lævæ gestamina nostræ</span>
+							<span>Morte carent animæ, semperque priore relicta</span><br />
+							<span>Sede, novis domibus habitant vivuntque receptæ;</span><br />
+							<span>Ipse ego, nam memini, Trojani tempora belli,</span><br />
+							<span>Panthorides Euphorbus eram, cui pectore quondam</span><br />
+							<span>Hæsit in adverso gravis hasta minoris Atridæ:</span><br />
+							<span>Agnovi Clypeum lævæ gestamina nostræ</span><br />
 							<span>Nuper Abanteïs templo Junonis in Argis.</span>
 						</p>
 					</blockquote>
 					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>Death has no pow’r th’ immortal soul to slay;</span>
-							<span>That, when its present body turns to clay,</span>
-							<span>Seeks a fresh home, and with unminish’d might</span>
-							<span>Inspires another frame with life and light.</span>
-							<span>So I myself, (well I the past recall)</span>
-							<span>When the fierce Greeks begirt Troy’s holy wall,</span>
-							<span>Was brave Euphorbus; and in conflict drear,</span>
-							<span>Poured forth my blood beneath Atrides’ spear:</span>
-							<span>The shield this arm did bear I lately saw</span>
+							<span>Death has no pow’r th’ immortal soul to slay;</span><br />
+							<span>That, when its present body turns to clay,</span><br />
+							<span>Seeks a fresh home, and with unminish’d might</span><br />
+							<span>Inspires another frame with life and light.</span><br />
+							<span>So I myself, (well I the past recall)</span><br />
+							<span>When the fierce Greeks begirt Troy’s holy wall,</span><br />
+							<span>Was brave Euphorbus; and in conflict drear,</span><br />
+							<span>Poured forth my blood beneath Atrides’ spear:</span><br />
+							<span>The shield this arm did bear I lately saw</span><br />
 							<span>In Juno’s shrine, a trophy of that war.</span>
 						</p>
 					</blockquote>
@@ -528,21 +528,21 @@
 					<p>This doctrine is alluded to doubtfully by Virgil, <i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">i</span>247. <a href="book-8.xhtml#noteref-112" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span>Illic, ut perhibent, aut intempesta silet nox</span>
-							<span>Semper, et obductâ densantur nocte tenebræ;</span>
-							<span>Aut redit a nobis Aurora, diemque reducit;</span>
-							<span>Nosque ubi primus equis oriens afflavit anhelis,</span>
+							<span>Illic, ut perhibent, aut intempesta silet nox</span><br />
+							<span>Semper, et obductâ densantur nocte tenebræ;</span><br />
+							<span>Aut redit a nobis Aurora, diemque reducit;</span><br />
+							<span>Nosque ubi primus equis oriens afflavit anhelis,</span><br />
 							<span>Illic sera rubens accendit lumina Vesper.</span>
 						</p>
 					</blockquote>
 					<p>Thus translated by Dryden, <span epub:type="z3998:roman">l</span> 338: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>There, as they say, perpetual night is found,</span>
-							<span>In silence brooding o’er th’ unhappy ground.</span>
-							<span>Or when Aurora leaves our northern sphere,</span>
-							<span>She lights the downward heav’n and rises there;</span>
-							<span>And when on us she breathes the living light</span>
+							<span>There, as they say, perpetual night is found,</span><br />
+							<span>In silence brooding o’er th’ unhappy ground.</span><br />
+							<span>Or when Aurora leaves our northern sphere,</span><br />
+							<span>She lights the downward heav’n and rises there;</span><br />
+							<span>And when on us she breathes the living light</span><br />
 							<span>Red Vesper kindles there the tapers of the night.</span>
 						</p>
 					</blockquote>
@@ -563,9 +563,9 @@
 					<p>This story is mentioned by Horace: <a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
-							<span class="i2">Siculique poetæ,</span>
-							<span>Narrabo interitum; deus immortalis haberi,</span>
-							<span>Dum cupit Empedocles ardentem frigidus Ætnam,</span>
+							<span class="i2">Siculique poetæ,</span><br />
+							<span>Narrabo interitum; deus immortalis haberi,</span><br />
+							<span>Dum cupit Empedocles ardentem frigidus Ætnam,</span><br />
 							<span>Insiluit.</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Ars Poetica</i>, 466.</cite>
@@ -575,7 +575,7 @@
 					<p>This is slightly parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">xi</span>. 278. Pope’s Version, 337. <a href="book-8.xhtml#noteref-118" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-119" epub:type="endnote">
-					<p>There were three festivals of Bacchus at Athens at which dramatic contests took place, the <i xml:lang="grc">Διονύσια κατ’ ἄγρους</i>, or, “in the fields;” the <i xml:lang="grc">Ληναῖα</i> or <i xml:lang="grc">τὰ ἐν Λίμναις</i>, or “the marshes,” a part of the city near the Acropolis, in which was situated the <i xml:lang="grc">Λήναιον</i>, an enclosure dedicated to Bacchus; and the <i xml:lang="grc">τὰ ἐν ἄστει</i>, “in the city,” or <i xml:lang="grc">τὰ μέγαλα Διονύσια</i>. The comic contests usually took place at the second or Lenaean festivals. Sometimes also at the Great Dionysia. <a href="book-8.xhtml#noteref-119" epub:type="backlink">↩</a></p>
+					<p>There were three festivals of Bacchus at Athens at which dramatic contests took place, the <i xml:lang="grc">Διονύσια κατ᾿ ἄγρους</i>, or, “in the fields;” the <i xml:lang="grc">Ληναῖα</i> or <i xml:lang="grc">τὰ ἐν Λίμναις</i>, or “the marshes,” a part of the city near the Acropolis, in which was situated the <i xml:lang="grc">Λήναιον</i>, an enclosure dedicated to Bacchus; and the <i xml:lang="grc">τὰ ἐν ἄστει</i>, “in the city,” or <i xml:lang="grc">τὰ μέγαλα Διονύσια</i>. The comic contests usually took place at the second or Lenaean festivals. Sometimes also at the Great Dionysia. <a href="book-8.xhtml#noteref-119" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-120" epub:type="endnote">
 					<p><i xml:lang="grc">ἔνδοξος</i>, glorious. <a href="book-8.xhtml#noteref-120" epub:type="backlink">↩</a></p>
@@ -631,7 +631,7 @@
 					<p>There is too remarkable a similarity in this to Campbell’s lines: <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem">
 						<p>
-							<span>’Tis distance lends enchantment to the view,</span>
+							<span>’Tis distance lends enchantment to the view,</span><br />
 							<span>And robes the mountains in their azure hue:</span>
 						</p>
 					</blockquote>
