--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,343 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">The Lives and Opinions of Eminent Philosophers</a>
+					<ol>
+						<li>
+							<a href="text/book-1.xhtml" epub:type="z3998:roman">I</a>
+							<ol>
+								<li>
+									<a href="text/book-1.xhtml#part-1-1">Introduction</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-2">Thales</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-3">Solon</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-4">Chilo</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-5">Pittacus</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-6">Bias</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-7">Cleobulus</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-8">Periander</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-9">Anacharsis, the Scythian</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-10">Myson</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-11">Epimenides</a>
+								</li>
+								<li>
+									<a href="text/book-1.xhtml#part-1-12">Pherecydes</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-2.xhtml" epub:type="z3998:roman">II</a>
+							<ol>
+								<li>
+									<a href="text/book-2.xhtml#part-2-1">Anaximander</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-2">Anaximenes</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-3">Anaxagoras</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-4">Archelaus</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-5">Socrates</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-6">Xenophon</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-7">Aeschines</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-8">Aristippus</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-9">Phaedo</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-10">Euclides</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-11">Stilpo</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-12">Crito</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-13">Simon</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-14">Glauco</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-15">Simias</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-16">Cebes</a>
+								</li>
+								<li>
+									<a href="text/book-2.xhtml#part-2-17">Menedemus</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/book-3.xhtml#book-3">Plato</a>
+						</li>
+						<li>
+							<a href="text/book-3.xhtml#book-3">Archytas to Dionysius, Greeting</a>
+						</li>
+						<li>
+							<a href="text/book-4.xhtml" epub:type="z3998:roman">IV</a>
+							<ol>
+								<li>
+									<a href="text/book-4.xhtml#part-4-1">Speusippus</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-2">Xenocrates</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-3">Polemo</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-4">Crates</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-5">Crantor</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-6">Arcesilaus</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-6">Arcesilaus to Thaumasias</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-7">Bion</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-8">Lacydes</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-9">Carneades</a>
+								</li>
+								<li>
+									<a href="text/book-4.xhtml#part-4-10">Clitomachus</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-5.xhtml" epub:type="z3998:roman">V</a>
+							<ol>
+								<li>
+									<a href="text/book-5.xhtml#part-5-1">Aristotle</a>
+								</li>
+								<li>
+									<a href="text/book-5.xhtml#part-5-2">Theophrastus</a>
+								</li>
+								<li>
+									<a href="text/book-5.xhtml#part-5-3">Strato</a>
+								</li>
+								<li>
+									<a href="text/book-5.xhtml#part-5-4">Lycon</a>
+								</li>
+								<li>
+									<a href="text/book-5.xhtml#part-5-5">Demetrius</a>
+								</li>
+								<li>
+									<a href="text/book-5.xhtml#part-5-6">Heraclides</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-6.xhtml" epub:type="z3998:roman">VI</a>
+							<ol>
+								<li>
+									<a href="text/book-6.xhtml#part-6-1">Antisthenes</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-2">Diogenes</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-3">Monimus</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-4">Onesicritus</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-5">Crates</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-6">Metrocles</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-7">Hipparchia</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-8">Menippus</a>
+								</li>
+								<li>
+									<a href="text/book-6.xhtml#part-6-9">Menedemus</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-7.xhtml" epub:type="z3998:roman">VII</a>
+							<ol>
+								<li>
+									<a href="text/book-7.xhtml#part-7-1">Zeno</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-1">King Antigonus to Zeno the Philosopher, Greeting</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-1">Zeno to King Antigonus, Greeting</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-2">Ariston</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-3">Herillus</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-4">Dionysius</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-5">Cleanthes</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-6">Sphaerus</a>
+								</li>
+								<li>
+									<a href="text/book-7.xhtml#part-7-7">Chrysippus</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-8.xhtml" epub:type="z3998:roman">VIII</a>
+							<ol>
+								<li>
+									<a href="text/book-8.xhtml#part-8-1">Pythagoras</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-1">Pythagoras to Anaximenes</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-2">Empedocles</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-3">Epicharmus</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-4">Archytas</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-4">Archytas to Plato, Greeting</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-4">Plato to Archytas, Greeting</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-5">Alcmaeon</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-6">Hippasus</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-7">Philolaus</a>
+								</li>
+								<li>
+									<a href="text/book-8.xhtml#part-8-8">Eudoxus</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-9.xhtml" epub:type="z3998:roman">IX</a>
+							<ol>
+								<li>
+									<a href="text/book-9.xhtml#part-9-1">Heraclitus</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-1">Heraclitus, of Ephesus, to King Darius, the Son of Hystaspes, Greeting</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-2">Xenophanes</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-3">Parmenides</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-4">Melissus</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-5">Zeno, the Eleatic</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-6">Leucippus</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-7">Democritus</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-8">Protagoras</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-9">Diogenes, of Apollonia</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-10">Anaxarchus</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-10">Life of Pyrrho</a>
+								</li>
+								<li>
+									<a href="text/book-9.xhtml#part-9-11">Timon</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-10.xhtml" epub:type="z3998:roman">X</a>
+						</li>
+						<li>
+							<a href="text/book-10.xhtml#book-10">Epicurus</a>
+						</li>
+						<li>
+							<a href="text/book-10.xhtml#book-10">Epicurus to Herodotus, Wishing He May Do Well</a>
+						</li>
+						<li>
+							<a href="text/book-10.xhtml#book-10">Epicurus to Pythocles, Wishing He May Do Well</a>
+						</li>
+						<li>
+							<a href="text/book-10.xhtml#book-10">Epicurus to Menoeceus, Greeting</a>
+						</li>
+						<li>
+							<a href="text/endnotes.xhtml">Endnotes</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +370,10 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">The Lives and Opinions of Eminent Philosophers</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
